2531193: Oracle create table script the "ON UPDATE" is wrong
2644778: "Contents Tab SQL filter" and "Limit cell edit WHERE clause size" dialogs didn't work

NullPointerException occured when last tab was closed

Fixed several problems when Schemas where cached.
E.g. "Contents Tab SQL filter" and "Limit cell edit WHERE clause size" dialogs did not open.


3.0 (2/21/2009)
==============

Enhancements: 

Dataimport Plugin:
  * SuggestColumns: if columns in database and in the first line of the file
    are equal, they are matched for the import.

Sybase Plugin:
  * New ExceptionFormatter for SQLWarnings: better viewing warnings while the parameter
    showplan is on (set showplan on) 

Look an Feel Plugin:
  * Made Nimbus look and feel available (needs at least JDK/JRE 1.6.0_10)
  * Made Metal look and feel with Ocean theme the default (used at first start up).
  * Added warning message that look and feels other than Metal may cause perfomance and/or functional problems


Updated Italian translation (Ivo Neri), Chinese translation (xpdz), French translation (Erwan Duroselle)

New user interface layout: Tabbed layout

Hibernate Plugin:
   - Cleaned up details display in mapped objects tab: Now every tree node displays an appropriate details table.
   - Added hint to solve StackOverflowError caused by logging that may occur when connecting to a Hibernate configuration.

Object tree search (Feature request 2004240):
   Above the Object tree is a text field and a find button.
   The search string has to be the exact simple (unqualified) name of an DB object or may contain placeholders ("%" or "_").
   The text field supports code completion.
   A filter button allows to apply the search string as Object tree filter. 

Object tree filtering:
   Multiple (comma separated) Object tree filters can be defined. Filter conditions can be excluding oder including.
   Better support for placeholders "%" and "_".